--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <th>GitHub Link</th>
         <th>Deploy Link</th>
       </tr>
+      <!-- team member -->
       <tr>
         <td>Responsive Company Member Team Page</td>
         <td class="status green">Completed</td>
@@ -54,6 +55,24 @@
         </td>
         <td>
           <a class="link" href="./Task-1/index.html" target="_blank"
+            >Click to View Project</a
+          >
+        </td>
+      </tr>
+      <!-- landing page -->
+      <tr>
+        <td>Car Rental Services Landing Page</td>
+        <td class="status green">Completed</td>
+        <td>
+          <a
+            class="link"
+            href="https://github.com/prakashs-dev/VeriTech-Intern/tree/main/Task-2"
+            target="_blank"
+            >Click to Code Repo</a
+          >
+        </td>
+        <td>
+          <a class="link" href="./Task-2/index.html" target="_blank"
             >Click to View Project</a
           >
         </td>
