--- a/index.html
+++ b/index.html
@@ -77,6 +77,25 @@
           >
         </td>
       </tr>
+      <!-- Todo App List -->
+      <tr>
+        <td>ToDo App List</td>
+        <td class="status green">Completed</td>
+        <td>
+          <a
+            class="link"
+            href="https://github.com/prakashs-dev/VeriTech-Intern/tree/main/Task-3"
+            target="_blank"
+            >Click to Code Repo</a
+          >
+        </td>
+        <td>
+          <a class="link" href="./Task-3/index.html" target="_blank"
+            >Click to View Project</a
+          >
+        </td>
+      </tr>
+
     </table>
   </body>
 </html>
