--- a/index.html
+++ b/index.html
@@ -96,6 +96,25 @@
         </td>
       </tr>
 
+      <!-- Netflix clone -->
+      <tr>
+        <td>Netflix Clone</td>
+        <td class="status green">Completed</td>
+        <td>
+          <a
+            class="link"
+            href="https://github.com/prakashs-dev/VeriTech-Intern/tree/main/Task-4"
+            target="_blank"
+            >Click to Code Repo</a
+          >
+        </td>
+        <td>
+          <a class="link" href="./Task-4/index.html" target="_blank"
+            >Click to View Project</a
+          >
+        </td>
+      </tr>
+
     </table>
   </body>
 </html>
